Version 0.3
===========

* Rewritten parsing to be about 3x faster

* Corrected bug in parsing that lead to incorrect collapsing of non-adjacent
  functions

Changes in version 0.2 
------------------------------------------------------------------------------

* Updated documentation
* Better namespace support